# res

./: .clang-format  .gitignore  CMakeLists.txt  README.md  create_resource.cmake  create_resource_apple.cmake  create_resource_default.cmake  create_resource_msvc.cmake  embedfiles.cc  example.cc
.github/workflows/: linux.yml  macosx.yml  unix.yml  windows.yml
